[gd_scene load_steps=13 format=3 uid="uid://b68tfcetjf8gq"]

[ext_resource type="PackedScene" uid="uid://cusa7i2mdcjsj" path="res://Scenes/Player.tscn" id="1"]
[ext_resource type="Script" path="res://Scripts/world.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://drcghmsqni4uw" path="res://Game Art/Character/Enthraz Adult.png" id="5_bankf"]
[ext_resource type="Script" path="res://Scenes/GUIManager.gd" id="6"]
[ext_resource type="PackedScene" uid="uid://bf81kthme77fj" path="res://Scenes/PlayerGUI.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://kvywpg6jxh6v" path="res://Scenes/InteractableObject.tscn" id="8_povyu"]
[ext_resource type="PackedScene" uid="uid://dpb2sxgxaiatq" path="res://Scenes/level.tscn" id="9_fmmhj"]
[ext_resource type="PackedScene" uid="uid://gfbiiq4w601g" path="res://Scenes/Enemy.tscn" id="9_t0sq7"]
[ext_resource type="Texture2D" uid="uid://bf1cbqw8c2nqv" path="res://Game Art/Animacion idle mujer-Sheet.png" id="10_g16h5"]
[ext_resource type="Script" path="res://Scenes/PauseNode.gd" id="11"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jvvf7"]
resource_local_to_scene = true
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ugrm4"]
resource_local_to_scene = true
radius = 5.0

[node name="Game" type="Node2D"]
process_mode = 1
y_sort_enabled = true
position = Vector2(-5, -34)

[node name="world" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("3")

[node name="Player" parent="world" instance=ExtResource("1")]
position = Vector2(209, 103)

[node name="InteractableObject" parent="world" instance=ExtResource("8_povyu")]
y_sort_enabled = true
position = Vector2(374, 93)
anim = false

[node name="InteractionMessageLbl" parent="world/InteractableObject/Node2D" index="0"]
offset_left = -35.0
offset_top = -19.5
offset_right = 81.0
offset_bottom = 5.5

[node name="Shape" parent="world/InteractableObject/Sensor" index="0"]
shape = SubResource("CircleShape2D_jvvf7")

[node name="Player2" parent="world" instance=ExtResource("8_povyu")]
visible = false
y_sort_enabled = true
position = Vector2(297, 112)
anim = false

[node name="Sprite2D" parent="world/Player2" index="0"]
texture = ExtResource("5_bankf")
hframes = 1
vframes = 1
frame = 0

[node name="InteractionMessageLbl" parent="world/Player2/Node2D" index="0"]
offset_left = -35.0
offset_top = -26.0
offset_right = 81.0
offset_bottom = -4.0
theme_override_font_sizes/font_size = 12
text = "Soy tu sucesor"

[node name="Shape" parent="world/Player2/Sensor" index="0"]
shape = SubResource("CircleShape2D_ugrm4")

[node name="Player3" parent="world" instance=ExtResource("8_povyu")]
visible = false
y_sort_enabled = true
position = Vector2(367, 147)
anim = false

[node name="Sprite2D" parent="world/Player3" index="0"]
texture = ExtResource("10_g16h5")
hframes = 11
vframes = 1
frame = 0

[node name="InteractionMessageLbl" parent="world/Player3/Node2D" index="0"]
offset_left = -35.0
offset_top = -23.0
offset_right = 81.0
offset_bottom = -1.0
theme_override_font_sizes/font_size = 12
text = "Ema
"

[node name="Shape" parent="world/Player3/Sensor" index="0"]
shape = SubResource("CircleShape2D_ugrm4")

[node name="Level" parent="world" instance=ExtResource("9_fmmhj")]

[node name="Sprite2D" type="Sprite2D" parent="world"]
visible = false
position = Vector2(278, 106)
scale = Vector2(1.1, 1.1)
texture = ExtResource("5_bankf")

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource("6")

[node name="PauseMenu" type="Control" parent="GUI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseNode" type="Control" parent="GUI/PauseMenu"]
layout_mode = 2
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11")

[node name="ColorRect" type="ColorRect" parent="GUI/PauseMenu/PauseNode"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.0823529, 0.0823529, 0.588235)

[node name="CenterContainer" type="CenterContainer" parent="GUI/PauseMenu/PauseNode"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -45.0
offset_right = 38.5
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/PauseMenu/PauseNode/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/PauseMenu/PauseNode/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Pause Manu"

[node name="Spaced Line" type="Control" parent="GUI/PauseMenu/PauseNode/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ResumeBtn" type="Button" parent="GUI/PauseMenu/PauseNode/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="ReestartBtn" type="Button" parent="GUI/PauseMenu/PauseNode/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Reestart"

[node name="QuitBtn" type="Button" parent="GUI/PauseMenu/PauseNode/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="PlayerGUI" parent="GUI" instance=ExtResource("8")]

[node name="Slime" parent="." instance=ExtResource("9_t0sq7")]
position = Vector2(376, 234)
attackBehaviour = null
secToAttack = 2

[node name="Slime2" parent="." instance=ExtResource("9_t0sq7")]
position = Vector2(411, 199)
attackBehaviour = null
secToAttack = 2

[node name="Slime3" parent="." instance=ExtResource("9_t0sq7")]
position = Vector2(1011, 242)
attackBehaviour = null
secToAttack = 2

[node name="Slime4" parent="." instance=ExtResource("9_t0sq7")]
position = Vector2(832, 232)
attackBehaviour = null
secToAttack = 2

[node name="Slime5" parent="." instance=ExtResource("9_t0sq7")]
position = Vector2(867, 197)
attackBehaviour = null
secToAttack = 2

[node name="Slime6" parent="." instance=ExtResource("9_t0sq7")]
position = Vector2(788, 234)
attackBehaviour = null
secToAttack = 2

[node name="Slime7" parent="." instance=ExtResource("9_t0sq7")]
position = Vector2(833, 97)
attackBehaviour = null
secToAttack = 2

[node name="Slime8" parent="." instance=ExtResource("9_t0sq7")]
position = Vector2(868, 62)
attackBehaviour = null
secToAttack = 2

[node name="Slime9" parent="." instance=ExtResource("9_t0sq7")]
position = Vector2(789, 99)
attackBehaviour = null
secToAttack = 2

[node name="Slime10" parent="." instance=ExtResource("9_t0sq7")]
position = Vector2(986, 275)
attackBehaviour = null
secToAttack = 2

[connection signal="pressed" from="GUI/PauseMenu/PauseNode/CenterContainer/VBoxContainer/ResumeBtn" to="GUI/PauseMenu/PauseNode" method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="GUI/PauseMenu/PauseNode/CenterContainer/VBoxContainer/ReestartBtn" to="GUI/PauseMenu/PauseNode" method="_on_ReestartBtn_pressed"]
[connection signal="pressed" from="GUI/PauseMenu/PauseNode/CenterContainer/VBoxContainer/QuitBtn" to="GUI/PauseMenu/PauseNode" method="_on_QuitBtn_pressed"]

[editable path="world/InteractableObject"]
[editable path="world/InteractableObject/Sensor"]
[editable path="world/Player2"]
[editable path="world/Player2/Sensor"]
[editable path="world/Player3"]
[editable path="world/Player3/Sensor"]
